Moved in about half of the code from the one-file version of this software

--- a/camera-location-engine/CMakeLists.txt
+++ b/camera-location-engine/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.21)
+cmake_minimum_required(VERSION 3.18)
 project(camera_location_engine)
 
 set(CMAKE_CXX_STANDARD 17)
@@ -14,6 +14,9 @@ include_directories(
   src/transformer
 )
 
+find_package( OpenCV REQUIRED )
+include_directories( ${OpenCV_INCLUDE_DIRS} )
+
 add_executable(camera_location_engine main.cpp)
 
-target_link_libraries(camera_location_engine camera_location_engine-src)
+target_link_libraries(camera_location_engine camera_location_engine-src ${OpenCV_LIBS})
