Brought in more code from one-file version and renamed driver to agent

--- a/camera-location-engine/CMakeLists.txt
+++ b/camera-location-engine/CMakeLists.txt
@@ -7,8 +7,8 @@ set(CMAKE_VERBOSE_MAKEFILE ON)
 add_subdirectory(src)
 include_directories(
   src
+  src/agent
   src/camera
-  src/driver
   src/image
   src/input
   src/transformer
