--- a/camera-location-engine/src/CMakeLists.txt
+++ b/camera-location-engine/src/CMakeLists.txt
@@ -3,14 +3,14 @@ project(camera_location_engine-src)
 
 set(CMAKE_VERBOSE_MAKEFILE ON)
 
+add_subdirectory(agent)
 add_subdirectory(camera)
-add_subdirectory(driver)
 add_subdirectory(image)
 add_subdirectory(input)
 add_subdirectory(transformer)
 include_directories(
+  agent
   camera
-  driver
   image
   input
   transformer
@@ -24,8 +24,8 @@ target_compile_options(camera_location_engine-src PRIVATE
 )
 
 target_link_libraries(camera_location_engine-src
+  camera_location_engine-src-agent
   camera_location_engine-src-camera
-  camera_location_engine-src-driver
   camera_location_engine-src-image
   camera_location_engine-src-input
   camera_location_engine-src-transformer
