--- a/camera-location-engine/src/camera/CMakeLists.txt
+++ b/camera-location-engine/src/camera/CMakeLists.txt
@@ -6,6 +6,9 @@ set(CMAKE_VERBOSE_MAKEFILE ON)
 include_directories(
 )
 
+find_package( OpenCV REQUIRED )
+include_directories( ${OpenCV_INCLUDE_DIRS} )
+
 add_library(camera_location_engine-src-camera
   camera.cpp
 )
@@ -13,3 +16,4 @@ add_library(camera_location_engine-src-camera
 target_compile_options(camera_location_engine-src-camera PRIVATE
 )
 
+target_link_libraries(camera_location_engine-src-camera ${OpenCV_LIBS})
